[tool.poetry]
name = "pw-modul-9"
version = "0.1.0"
description = ""
authors = ["Kateryna-Shylina <shylina.k.v@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
mongoengine = "^0.28.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
